--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,8 @@
  */
 
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -244,7 +246,7 @@ p.year {
     width: calc(100% - 204px);
   }
 
-  .movie-show .movie .actor-show .actor {
+  .movie-show .movie h3, .actor-show .actor h3 {
     font-size: 24px;
     line-height: 24px;
   }
